main:owner logic
